M0 Spike C: native-image viability — GREEN (G4); M0 verdict GO
All four risky capabilities run in a no-fallback GraalVM native-image:
parse, resolve (ReflectionTypeSolver JDK + JavaParserTypeSolver project),
FFM Arena.ofShared mmap, and the MCP stdio loop. First native read of the
§8 targets: ~14 ms cold start (vs <100 ms), 25.8 MB RSS (vs <100 MB),
~27 MB binary — re-baselining Spike B's JVM ~310 MB live / ~1.37 GB committed.

Two documented build findings: metadata must be bundled before the native
build (trace → package → build); Arena.ofShared needs
-H:+UnlockExperimentalVMOptions -H:+SharedArenaSupport. The feared SymbolSolver
reflection needed only the agent's own output (committed as the M1 seed).

Adds SpikeC.java + META-INF/native-image/reachability-metadata.json; updates
M0-RESULTS.md (G4 row, native-image section, final GO) and the spike README.
Also folds in the prior keep-spikes decision edits to CLAUDE.md and the M0 doc
(spike code is retained as a reference, not deleted).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>